# SoK-ZK-Friendly-Hash-Functions

./: Cargo.toml  README.md  results.txt
Plain_implementations/: lib.rs  utils.rs
Plain_implementations/Anemoi/: anemoi.rs  anemoi_babybear.rs  anemoi_bls12_381.rs  anemoi_bn254.rs  anemoi_goldilocks.rs  anemoi_koalabear.rs  anemoi_mersenne31.rs  anemoi_params.rs  instances.rs  mod.rs
Plain_implementations/GmimcErf/: gmimc_erf.rs  gmimc_erf_babybear.rs  gmimc_erf_bls12_381.rs  gmimc_erf_bn254.rs  gmimc_erf_felt252.rs  gmimc_erf_goldilocks.rs  gmimc_erf_koalabear.rs  gmimc_erf_mersenne31.rs  gmimc_erf_params.rs  instances.rs  mod.rs
Plain_implementations/Griffin/: griffin.rs  griffin_babybear.rs  griffin_bls12_381.rs  griffin_bn254.rs  griffin_goldilocks.rs  griffin_koalabear.rs  griffin_mersenne31.rs  griffin_params.rs  instances.rs  mod.rs
Plain_implementations/Monolith/: instances.rs  mod.rs  monolith.rs  monolith_babybear.rs  monolith_goldilocks.rs  monolith_koalabear.rs  monolith_mersenne31.rs  monolith_params.rs
Plain_implementations/Neptune/: instances.rs  mod.rs  neptune.rs  neptune_babybear.rs  neptune_bls12_381.rs  neptune_bn254.rs  neptune_goldilocks.rs  neptune_koalabear.rs  neptune_mersenne31.rs  neptune_params.rs
Plain_implementations/Polocolo/: instances.rs  mod.rs  polocolo.rs  polocolo_babybear.rs  polocolo_bls12_381.rs  polocolo_bn254.rs  polocolo_felt252.rs  polocolo_goldilocks.rs  polocolo_koalabear.rs  polocolo_luts.rs  polocolo_params.rs
Plain_implementations/Poseidon/: instances.rs  mod.rs  poseidon.rs  poseidon_bn254.rs  (+7 more)
src/: main.rs
(+66 files in other folders)
